SEBSERV-730 removed ContentType (formurlenc) for API GET requests